# sgcontrol

./: AUTHORS  ChangeLog  INSTALL  LICENSE  Makefile.am  NEWS  README  README.md  acconfig.h  aclocal.m4  autogen.sh  config.h.in  configure.ac  org.markjfine.sgcontrol.gschema.xml  sgcontrol.desktop
data/: eibi-freq-a25-02-Jun.txt  eibi-readme.txt  statsTypeData.txt
macros/: Makefile.am  autogen.sh
pixmaps/: Makefile.am  backdrop.xpm  digits_small-blue.xpm  digits_small.xpm  export.xpm  insertafter.xpm  insertbefore.xpm  meter-blue.xpm  meter.xpm  move.xpm  showtimer.xpm  timer.xpm  unmark.xpm
src/: EntryDlg.glade  LogWindow.glade  Makefile.am  MemWindow.glade  OptionBox.glade  SGControl.glade  TuningDlg.glade  database.c  database.h  extra.c  extra.h  interface.c  interface.h  logfile.c  logfile.h  main.c  radio_display.css
