sgcontrol_pixmapsdir = $(datadir)/pixmaps/sgcontrol

sgcontrol_pixmaps_DATA = \
        about.svg \
        add.svg \
	anf.svg \
	apply.svg \
	atten.svg \
	backarw.svg \
	backdrop.xpm \
	backspace.svg \
	backward.svg \
	backwards.svg \
        blue.svg \
        cancel.svg \
	close.svg \
	comms.svg \
	delete.svg \
	digits_small.xpm \
	digits_small-blue.xpm \
	dnr.svg \
	enter.svg \
	exit.svg \
	export.xpm \
	forward.svg \
	forwards.svg \
	forwarw.svg \
        gray.svg \
        green.svg \
	insertafter.xpm \
	insertbefore.xpm \
	lock.svg \
	log.svg\
	mark.svg \
	memory.svg \
	meter.xpm \
	meter-blue.xpm \
	modify.svg \
	move.xpm \
	new.svg \
	noise.svg \
	notch.svg \
	open.svg \
	opt.svg \
	orange.svg \
	power.svg \
	preamp.svg \
	print.svg \
	purple.svg \
	red.svg \
	refresh.svg \
	save.svg \
	saveas.svg \
	scan.svg \
	search.svg \
	../data/sgcontrol.png \
	showmemory.svg \
	showtimer.xpm \
	tape.svg \
	timefilt.svg \
	timer.xpm \
	unmark.xpm \
	view.svg \
	web.svg \
	yellow.svg

EXTRA_DIST = $(sgcontrol_pixmaps_DATA)

